--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
-<html ng-app>
+<html ng-app="app">
   <head>
     <meta charset="utf-8">
     <title>CodeIt Test Blog</title>
     <link rel="stylesheet" href="styles/style.min.css"></link>
   </head>
   <body>
-    <script type="text/javascript" src="app.min.js"></script>
+    <section class="main-content">
+      <h1>Hello world!</h1>
+      <ui-view></ui-view>
+    </section>
+    <script type="text/javascript" src="app.js"></script>
   </body>
 </html>
