--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,10 +6,7 @@
     <link rel="stylesheet" href="styles/style.min.css"></link>
   </head>
   <body>
-    <section class="main-content">
-      <h1>Hello world!</h1>
-      <ui-view></ui-view>
-    </section>
+    <section ui-view class="main-content"></section>
     <script type="text/javascript" src="app.js"></script>
   </body>
 </html>
